--- a/yuuhpizzakebab/templates/drink/edit_drink.html
+++ b/yuuhpizzakebab/templates/drink/edit_drink.html
@@ -10,26 +10,30 @@
       <div class="yuuh-pizza-kebab">
         <h1>{{ drink.name if drink else 'New Drink' }}</h1>
 
-        <div>
-            <form action="" method="post">
-                <div class="form-group">
-                    <label>Name</label>
+        <form action="" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-sm-2">Name</label>
+                <div class="col-sm-10">
                     <input type="text" class="form-control" name="drink_name" value="{{ drink.name if drink }}">
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label>Price</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2">Price</label>
+                <div class="col-sm-10">
                     <input type="number" class="form-control" name="drink_price" value="{{ drink.price_without_dollar_sign() if drink }}">
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label>Image URL</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2">Image URL</label>
+                <div class="col-sm-10">
                     <input type="url" class="form-control" name="drink_image_url" value="{{ drink.image_url if drink }}">
                 </div>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Save</button>
-            </form>
-        </div>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </form>
       </div>
     </div>
   </body>
