--- a/yuuhpizzakebab/templates/kebab/edit_kebab.html
+++ b/yuuhpizzakebab/templates/kebab/edit_kebab.html
@@ -10,26 +10,30 @@
       <div class="yuuh-pizza-kebab">
         <h1>{{ kebab.name if kebab else 'New Kebab' }}</h1>
 
-        <div>
-            <form action="" method="post">
-                <div class="form-group">
-                    <label>Name</label>
+        <form action="" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-sm-2">Name</label>
+                <div class="col-sm-10">
                     <input type="text" class="form-control" name="kebab_name" value="{{ kebab.name if kebab }}">
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label>Price</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2">Price</label>
+                <div class="col-sm-10">
                     <input type="number" class="form-control" name="kebab_price" value="{{ kebab.price_without_dollar_sign() if kebab }}">
                 </div>
+            </div>
 
-                <div class="form-group">
-                    <label>Image URL</label>
+            <div class="form-group">
+                <label class="control-label col-sm-2">Image URL</label>
+                <div class="col-sm-10">
                     <input type="url" class="form-control" name="kebab_image_url" value="{{ kebab.image_url if kebab }}">
                 </div>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Save</button>
-            </form>
-        </div>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </form>
       </div>
     </div>
   </body>
