--- a/yuuhpizzakebab/templates/kebab/kebabs.html
+++ b/yuuhpizzakebab/templates/kebab/kebabs.html
@@ -10,6 +10,16 @@
       <div class="yuuh-pizza-kebab">
         <h1>Kebab</h1>
         <br>
+
+        {% if session.is_admin %}
+        <div class="row">
+            <div class="col-sm-12">
+                <a href="{{ url_for('create_kebab') }}" class="btn btn-primary" role="button">Add New</a>
+            </div>
+        </div>
+        <br>
+        {% endif %}
+
         <div class="row">
             {% for k in kebabs %}
                 <div class="col-sm-6 col-md-4">
@@ -24,7 +34,7 @@
                             <div class="btn-group btn-group-justified">
                                 <a href="{{ url_for('select_kebab', kebab_id=k.id) }}" class="btn btn-primary" role="button">Order</a>
 
-                                {% if session.is_admin and not selecting %}
+                                {% if session.is_admin %}
                                     <a href="{{ url_for('edit_kebab', kebab_id=k.id) }}" class="btn btn-primary" role="button">Edit</a>
                                     <a href="{{ url_for('delete_kebab', kebab_id=k.id) }}" class="btn btn-primary" role="button">Delete</a>
                                 {% endif %}
