--- a/yuuhpizzakebab/templates/login.html
+++ b/yuuhpizzakebab/templates/login.html
@@ -11,23 +11,23 @@
         <h1>Log in</h1>
         <br>
 
-            <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-            <form action="" method="post">
-                <div class="form-group">
-                <label>Username</label>
-                <input type="text" class="form-control" name="username">
+        <form action="" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label class="control-label col-sm-2">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" name="username">
                 </div>
+            </div>
 
-                <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" name="password">
+            <div class="form-group">
+                <label class="control-label col-sm-2">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" name="password">
                 </div>
+            </div>
 
-                <button type="submit" class="btn btn-primary">Log in</button>
-            </form>
-        </div>
-      </div>
+            <button type="submit" class="btn btn-primary">Log in</button>
+        </form>
       </div>
     </div>
   </body>
