--- a/yuuhpizzakebab/templates/navbar.html
+++ b/yuuhpizzakebab/templates/navbar.html
@@ -32,19 +32,17 @@
                     <a href="{{ url_for('list_toppings') }}">Toppings</a>
                 </li>
 
-                <li class="{{ 'active' if request.path == url_for('list_active_orders') }}">
-                    <a href="{{ url_for('list_active_orders') }}">Active Orders</a>
+                <li class="dropdown {{ 'active' if request.path in [url_for('list_active_orders'), url_for('list_orders')] }}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Orders <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('list_active_orders') }}">Active</a></li>
+                        <li><a href="{{ url_for('list_orders') }}">All</a></li>
+                    </ul>
                 </li>
-
-                <li class="{{ 'active' if request.path == url_for('list_orders') }}">
-                    <a href="{{ url_for('list_orders') }}">Orders</a>
-                </li>
-
             {% endif %}
 
-            <li class="navbar-text">
-            </li>
-
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
             {% if not session.logged_in %}
                 <li class="{{ 'active' if request.path == url_for('login') }}">
                     <a href="{{ url_for('login') }}">Log In</a>
@@ -53,12 +51,11 @@
                     <a href="{{ url_for('create_account') }}">Create Account</a>
                 </li>
             {% else %}
-                <li class="navbar-text">
-                    <p>Logged in as {{ session['username'] }}</p>
-                </li>
-
-                <li class="">
-                    <a href="{{ url_for('logout') }}">Log out</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logged in as {{ session['username'] }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('logout') }}">Log out</a></li>
+                    </ul>
                 </li>
             {% endif %}
         </ul>
