--- a/yuuhpizzakebab/static/css/yuuhpizzakebab.css
+++ b/yuuhpizzakebab/static/css/yuuhpizzakebab.css
@@ -23,3 +23,7 @@ td:nth-child(1) {
     min-height: 50px;
     height: 250px;
 }
+
+div.thumbnail {
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, .35);
+}
