--- a/yuuhpizzakebab/templates/topping/toppings.html
+++ b/yuuhpizzakebab/templates/topping/toppings.html
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <a href="{{ url_for('create_drink') }}" class="btn btn-primary" role="button">Add New</a>
+                <a href="{{ url_for('create_topping') }}" class="btn btn-primary" role="button">Add New</a>
             </div>
         </div>
         <br>
