add order delivering, rejecting

--- a/yuuhpizzakebab/templates/order/create_order.html
+++ b/yuuhpizzakebab/templates/order/create_order.html
@@ -25,7 +25,7 @@
                             <td>{{ p.name }}</td>
                             <td>Pizza</td>
                             <td>{{ p.price }}</td>
-                            <td><a href="{{ url_for('new_order') }}">Remove</a></td>
+                            <td><a href="{{ url_for('remove_item_from_order', item_type='pizza', item_id=p.id) }}">Remove</a></td>
                         </tr>
                     {% endfor %}
 
@@ -34,7 +34,7 @@
                             <td>{{ k.name }}</td>
                             <td>Kebab</td>
                             <td>{{ k.price }}</td>
-                            <td><a href="{{ url_for('new_order') }}">Remove</a></td>
+                            <td><a href="{{ url_for('remove_item_from_order', item_type='kebab', item_id=k.id) }}">Remove</a></td>
                         </tr>
                     {% endfor %}
 
@@ -43,7 +43,7 @@
                             <td>{{ d.name }}</td>
                             <td>Drink</td>
                             <td>{{ d.price }}</td>
-                            <td><a href="{{ url_for('new_order') }}">Remove</a></td>
+                            <td><a href="{{ url_for('remove_item_from_order', item_type='drink', item_id=d.id) }}">Remove</a></td>
                         </tr>
                     {% endfor %}
 
@@ -59,9 +59,25 @@
 
             <br>
             <br>
+            <div class="row">
+                <div class="col-lg-6">
+                    <form action="{{ url_for('set_delivery_address') }}" method="post" class="form-horizontal">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2">Delivery Address</label>
+                            <div class="col-sm-8">
+                                <input type="text" class="form-control" placeholder="Delivery address" name="delivery_address" value="{{ delivery_address if delivery_address }}">
+                            </div>
+                            <div class="col-sm-2">
+                                <button class="btn btn-default" type="submit">Save</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <br>
 
             <div class="btn-group btn-group-vertical">
-                <a href="{{ url_for('place_order') }}" class="btn btn-primary {{ 'disabled' if not (pizzas or kebabs or drinks) }}">Place Order</a>
+                <a href="{{ url_for('place_order') }}" class="btn btn-primary {{ 'disabled' if not (pizzas or kebabs or drinks) or not delivery_address }}">Place Order</a>
                 <a href="{{ url_for('clear_order') }}" class="btn btn-danger {{ 'disabled' if not (pizzas or kebabs or drinks) }}">Clear</a>
             </div>
 
