--- a/yuuhpizzakebab/templates/order/deliver_order.html
+++ b/yuuhpizzakebab/templates/order/deliver_order.html
@@ -11,19 +11,19 @@
         <h1>Delivery Information</h1>
 
         <div class="row">
-            <form action="" method="post">
-                <div class="form-group">
-                    <label>Customer Found</label>
-                    <input type="checkbox" class="form-control" name="customer_found">
-                </div>
+            <div class="center-block">
+                <form action="" method="post">
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="" name="customer_found">Customer Found</label>
+                    </div>
 
-                <div class="form-group">
-                    <label>Had Problems</label>
-                    <input type="checkbox" class="form-control" name="had_problems">
-                </div>
+                    <div class="checkbox">
+                        <label><input type="checkbox" value="" name="had_problems">Had Problems</label>
+                    </div>
 
-                <button type="submit" class="btn btn-primary">Mark as Delivered</button>
-            </form>
+                    <button type="submit" class="btn btn-primary">Mark as Delivered</button>
+                </form>
+            </div>
         </div>
       </div>
     </div>
