--- a/yuuhpizzakebab/templates/order/orders.html
+++ b/yuuhpizzakebab/templates/order/orders.html
@@ -17,8 +17,8 @@
                     <th>Ordered At</th>
                     <th>Deliver To</th>
                     <th>Total Price</th>
+                    <th>Status</th>
                     {% if session.is_admin %}
-                        <th></th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -38,9 +38,9 @@
                         <td>{{ o.ordered_at }}</td>
                         <td>{{ o.delivery_address }}</td>
                         <td>{{ '${}'.format('%0.2f' % o.total_price()) }}</td>
+                        <td>{{ 'Rejected' if o.rejected else 'Delivered' if o.delivery_summary else 'Waiting' }}</td>
                         <td><a href="{{ url_for('order_details', order_id=o.id) }}">Details</a></td>
                         {% if not o.rejected and not o.delivery_summary %}
-                        <td><a href="{{ url_for('add_discount', order_id=o.id) }}">Add Discount</a></td>
                         <td><a href="{{ url_for('reject_order', order_id=o.id) }}">Reject</a></td>
                         <td><a href="{{ url_for('mark_order_as_delivered', order_id=o.id) }}">Mark As Delivered</a></td>
                         {% endif %}
