fix order delivering somewhat

--- a/yuuhpizzakebab/templates/order/deliver_order.html
+++ b/yuuhpizzakebab/templates/order/deliver_order.html
@@ -10,21 +10,21 @@
       <div class="yuuh-pizza-kebab">
         <h1>Delivery Information</h1>
 
-        <div class="row">
-            <div class="center-block">
-                <form action="" method="post">
-                    <div class="checkbox">
-                        <label><input type="checkbox" value="" name="customer_found">Customer Found</label>
-                    </div>
+            <form action="" method="post">
+                <label>
+                    <input type="checkbox" class="form-control" name="customer_found"> Customer Found
+                </label>
 
-                    <div class="checkbox">
-                        <label><input type="checkbox" value="" name="had_problems">Had Problems</label>
-                    </div>
+                <br>
 
-                    <button type="submit" class="btn btn-primary">Mark as Delivered</button>
-                </form>
-            </div>
-        </div>
+                <label>
+                    <input type="checkbox" class="form-control" name="had_problems"> Had Problems
+                </label>
+
+                <br>
+
+                <button type="submit" class="btn btn-primary">Mark as Delivered</button>
+            </form>
       </div>
     </div>
   </body>
